# analysis

./: .gitignore  README.md  pyproject.toml
scripts/: README.md  load_stock_symbols.py  urgent_slack_notifier.py
src/: models.py
supabase/: config.toml
supabase/migrations/: 20250408142114_create_stocks_table.sql  20250409015732_create_stocks_table.sql
supabase/schemas/: stocks.sql
